vpc-workshop/main.tf
provider "aws" {
  profile = "default"
  region  = "eu-central-1"
}

# Virtual Private Cloud (VPC)

resource "aws_vpc" "main" {
  cidr_block = local.vpc_cidr_block

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${local.name}-vpc"
  }
}

# Internet Gateway (IGW)

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${local.name}-igw"
  }
}

# Subnets

resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.main.id
  cidr_block = local.public_subnet_cidr_block

  map_public_ip_on_launch = true

  tags = {
    Name = "${local.name}-public-subnet"
  }
}

# Route Tables (RT)

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${local.name}-public-rt"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

# Network Access Control Lists (NACLs)

resource "aws_network_acl" "public" {
  vpc_id = aws_vpc.main.id

  subnet_ids = [aws_subnet.public.id]

  ingress {
    rule_no    = 200
    action     = "allow"
    protocol   = "tcp"
    from_port  = 0
    to_port    = 65535
    cidr_block = "0.0.0.0/0"
  }

  egress {
    rule_no    = 200
    action     = "allow"
    protocol   = "tcp"
    from_port  = 0
    to_port    = 65535
    cidr_block = "0.0.0.0/0"
  }

  tags = {
    Name = "${local.name}-public-nacl"
  }
}

# EC2

resource "aws_key_pair" "deployer" {
  key_name   = "deployer-key"
  public_key = var.public_key
}

resource "aws_instance" "main" {
  ami           = local.linux_ami
  instance_type = "t2.micro"

  subnet_id = aws_subnet.public.id

  key_name                    = aws_key_pair.deployer.key_name
  associate_public_ip_address = true

  vpc_security_group_ids = [aws_security_group.main.id]

  user_data = <<EOF
#!/bin/bash
sudo yum install -y epel-release
sudo yum install -y nginx
sudo service nginx start
EOF

  tags = {
    Name = "${local.name}-instance"
  }
}

resource "aws_security_group" "main" {
  name   = "${local.name}-main-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH Access"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP Access"
  }

  egress {
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = -1
  }

  tags = {
    Name = "${local.name}-main-sg"
  }
}
